📘 Fast Food API

--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://root:pg_password@localhost/fast_food
+sqlalchemy.url = postgresql://postgres:pg_password@localhost/fast_food
 
 
 [post_write_hooks]
