--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ ENVIRONMENT=local
 
 DB_HOST=localhost
 DB_READ_ONLY_HOST=localhost
-DB_USER=root
+DB_USER=postgres
 DB_PASSWORD=pg_password
 DB_NAME=fast_food
 DB_PORT=5432
